# splintercat

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  splintercat.yaml
.github/workflows/: ci.yml
doc/: DESIGN.md  LAYOUT.md  LLM.md  TODO.md  design.md  gitimerge.py  llm.md  merge-resolver.md  reset-branches.bash  reset.md  todo.md
docs/: benchmark.md  check-runner.md  commands.md  configuration.md  coordinator.md  design.md  llm.md  merge-ort.md  merge-resolver.md  plan.md  reset-branches.bash  reset.md  rice.md  shim.md  todo.md  tools.md
src/: __init__.py  app.py
src/command/: __init__.py  merge.py  reset.py
src/core/: __init__.py  command_runner.py  config.py  log.py  logging.py  patch.py  result.py  runner.py  source.py  state.py  target.py
src/defaults/: commands.yaml  git.yaml
src/git/: __init__.py  imerge.py
src/model/: __init__.py  planner.py  resolver.py  summarizer.py
src/patchset/: __init__.py  base.py  composed.py  indexed.py  lazy.py  patchset.py  range.py
src/recovery/: __init__.py  base.py  bisect.py  retry_all.py  retry_specific.py  switch_strategy.py
src/runner/: __init__.py  build.py  check.py
src/splintercat/: __main__.py  cli.py
src/splintercat/command/: __init__.py  merge.py  reset.py
src/splintercat/core/: base.py  config.py  log.py  logdir.py  runner.py  yaml_settings.py
src/splintercat/defaults/: agents.yaml  commands.yaml  default.yaml  prompts.yaml  sinks.yaml  tools.yaml
src/splintercat/git/: __init__.py  imerge.py  integration.py  shim.py
src/splintercat/model/: __init__.py  resolver.py  summarizer.py
src/splintercat/recovery/: __init__.py  base.py  bisect.py  retry.py  retry_all.py  switch_strategy.py
src/state/: __init__.py  attempt.py  build.py  conflict.py  workflow.py
src/strategy/: __init__.py  base.py  batch.py  bisect.py  greedy.py  optimistic.py  per_conflict.py  sequential.py
src/tools/: __init__.py  base.py  conflict.py  git.py  merge.py  registry.py  search.py
src/workflow/: __init__.py  graph.py
tests/: __init__.py  conftest.py  test_buildrunner.py  test_checkrunner.py  test_commands.py  test_integration.py  test_log_formats.py  test_parser.py  test_shim.py  test_tool_logging.py  test_tool_logging_integration.py  test_toolset.py  test_workspace.py
tests/integration/: test_git_integration.py
tests/loader/: __init__.py  test_cli_include.py  test_edge_cases.py  test_merge_behavior.py  test_templates.py  test_yaml_include.py
(+51 files in other folders)
