[project]
name = "splintercat"
version = "0.1.0"
description = "LLM-assisted git merge conflict resolution with build/test validation and intelligent recovery strategies"
requires-python = ">=3.11"
authors = [
    {name = "John Byrd"},
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["git", "merge", "conflict-resolution", "llm", "automation"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pydantic-ai[pydantic-graph]>=1.0.0",
    "git-imerge>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[project.urls]
Repository = "https://github.com/johnwbyrd/splintercat"
Issues = "https://github.com/johnwbyrd/splintercat/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
